# jucepy

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
cmake/: download_cpm.cmake
